// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`models reducer handling CREATE action should create a new entity of given type and add it to the existing type container. 1`] = `
Object {
  "SuperCoolEntity": Object {
    "byId": Object {
      "123": Object {
        "foo": "bar",
        "id": "123",
      },
      "432": Object {
        "bar": "foo",
        "id": "432",
      },
    },
    "ids": Array [
      "432",
      "123",
    ],
  },
}
`;

exports[`models reducer handling CREATE action should create a new entity of given type, and create a new type container if it does not exist. 1`] = `
Object {
  "SuperCoolEntity": Object {
    "byId": Object {
      "123": Object {
        "foo": "bar",
        "id": "123",
      },
    },
    "ids": Array [
      "123",
    ],
  },
}
`;

exports[`models reducer handling CREATE action should create a new entity of new type and add it next to other types. 1`] = `
Object {
  "SuperCoolEntity": Object {
    "byId": Object {
      "123": Object {
        "foo": "bar",
        "id": "123",
      },
    },
    "ids": Array [
      "123",
    ],
  },
  "SuperLameEntity": Object {
    "byId": Object {
      "432": Object {
        "bar": "foo",
        "id": "432",
      },
    },
    "ids": Array [
      "432",
    ],
  },
}
`;

exports[`models reducer handling CREATE action should overwrite existing entities of same type if it has same id. 1`] = `
Object {
  "SuperCoolEntity": Object {
    "byId": Object {
      "123": Object {
        "foo": "foo",
        "id": "123",
      },
    },
    "ids": Array [
      "123",
    ],
  },
}
`;

exports[`models reducer should have empty initial state 1`] = `Object {}`;
